@@ -1,3 +1,9 @@
+Fri Aug 17 01:25:21 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* HTMLparser.c HTMLtree.c include/libxml/HTMLparser.h:
+	  trying to fix some troubles w.r.t. function returning
+	  const xxxPtr.
+
 Thu Aug 16 21:33:20 CEST 2001 Daniel Veillard <daniel@veillard.com>
 
 	* win32/dsp/libxml2.def.src: another set of symbols conditionally
